# nearest-neighbor

./: .dockerignore  .editorconfig  .env.local.example  .envrc.local.example  .gitignore  .mcp.json  .oxfmtrc.json  .oxlintrc.json  .prettierignore  .preview-teardown-test  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  bunfig.toml  cog.toml  commitlint.config.cjs  communique.toml  docker-compose.dev.yml  hk.pkl  mise.local.toml.example  mise.production.toml  mise.staging.toml  mise.toml  package.json  tsconfig.base.json  tsconfig.json
.agents/: shared.md
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: implementer.md  openspec-review-cross-proposal-reviewer.md  openspec-review-decision-compliance-reviewer.md  openspec-review-principles-reviewer.md  openspec-review-repo-alignment-to-specs.md  openspec-review-spec-quality-reviewer.md  openspec-review-tasks-granularity-reviewer.md  researcher.md
.claude/commands/opsx/: propose.md
.claude/hooks/: post-edit-format.sh  pre-bash-guard.sh
.claude/skills/commit/: SKILL.md
.claude/skills/deploy/: SKILL.md
.claude/skills/mise/: SKILL.md
.claude/skills/openspec-propose/: SKILL.md
.claude/skills/pr/: SKILL.md
.cursor/: hooks.json  mcp.json
.cursor/commands/: opsx-propose.md
.cursor/rules/: code-style.mdc  stack-elysia.mdc  testing.mdc
.github/: CODEOWNERS  FUNDING.yml  SECRETS.md  actionlint.yaml  dependabot.yml  pull_request_template.md
.github/actions/preview-db/: action.yml
.github/actions/setup-mise/: action.yml
.github/workflows/: ci.yml  delete-preview.yml  deploy-fly-app.yml  deploy-preview.yml  deploy-production.yml  deploy-staging.yml  pr-title.yml  reap-previews.yml  release-bump.yml  release.yml
.opencode/: opencode.json
.opencode/commands/: opsx-propose.md
apps/api/: Dockerfile  bunfig.toml  fly.production.toml  fly.staging.toml  package.json  tsconfig.json
apps/api/src/: config.ts  index.test.ts  index.ts  migrate.ts  server.ts
apps/cli/: Cargo.toml  README.md  build.rs  mise.toml  nbr.usage.kdl
apps/cli/src/: analytics.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  output.rs  resolver.rs
apps/cli/src/commands/: auth.rs  dating.rs  memories.rs  messaging.rs  mod.rs  relationships.rs  report.rs  social.rs  system.rs
apps/cli/tests/: api_integration.rs  auth_commands.rs  cli_binary.rs  commands_integration.rs  g1_client.rs  g2_auth_commands.rs  g3_social_messaging_relationships.rs  g4_dispatch.rs  g5_unit_tops.rs  g6_memories.rs  lib_dispatch.rs  moderation_block.rs  report_commands.rs
apps/cli/tests/common/: mod.rs
apps/web/: .env.example  Dockerfile  fly.preview.toml  fly.production.toml  fly.staging.toml  mise.toml  package.json  react-router.config.ts  server.ts  tsconfig.json  vite.config.ts
apps/web/app/: app.css  brand.ts  content.ts  entry.server.tsx  root.tsx  routes.ts
apps/web/public/: install.sh  llms.txt  robots.txt  site.webmanifest  sitemap.xml
apps/web/scripts/: brand-assets.hash  generate-brand-assets.ts
apps/web/src/: config.test.ts  config.ts  health.ts  index.test.ts  index.ts  placeholder.ts  server.ts
cli/: Cargo.toml  README.md  nbr.usage.kdl
cli/src/: analytics.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  output.rs
cli/src/commands/: auth.rs  mod.rs  relationships.rs  social.rs
cli/tests/: analytics_integration.rs  api_integration.rs  auth_commands.rs  cli_binary.rs  lib_dispatch.rs
design/: cli-taxonomy-proposal.md  gap-report-corrections.md  gap-report.md
design/affection-brand-design-guide/: README.md
design/affection-brand-design-guide/project/: .thumbnail  Brand & Style Guide.dc.html  Landing Page.dc.html
docs/: api-versioning.md  architecture.md  deployment.md  first-hours.md  local-agents.md  observability.md  testing.md
docs/cli/: README.md  agents-bootstrap.md  agents-headless.md  agents-ready.md  agents-report.md  agents-setup.md  agents-up.md  agents:clean.md  agents:fleet.md  agents:sync.md  dev-ensure-ports.md  docs-gen-spec.md  index.md
docs/cli/completions/: _nearest-neighbor-mise.bash  _nearest-neighbor-mise.fish  _nearest-neighbor-mise.zsh
docs/cli/man/: nearest-neighbor-mise.1
e2e/: tsconfig.json
e2e/plugin-install/: Dockerfile.claude  Dockerfile.codex  Dockerfile.nbr-builder  README.md  entrypoint.claude.sh  entrypoint.codex.sh  entrypoint.hermes.sh  run.sh
e2e/plugins/: claude-hooks.test.ts  codex-hooks.test.ts  helpers.ts  install-nbr.test.ts  memory-injection.test.ts  onboarding-sync.test.ts
e2e/plugins/fixtures/: fake-nbr
e2e/release/: set-version.test.ts
openspec/: config.yaml  principles.md
openspec/changes/add-agent-memory-onboarding/: blocking-changes.md  design.md  proposal.md  tasks.md
openspec/changes/add-last-active-deck-sort/: blocking-changes.md  design.md  proposal.md  tasks.md
openspec/changes/post-likes-and-reposts/: .openspec.yaml  proposal.md
openspec/schemas/aligned/: schema.yaml
openspec/schemas/nn/: schema.yaml
openspec/specs/content-moderation/: spec.md
openspec/specs/dating-deck-ordering/: spec.md
plugins/claude/: README.md
plugins/codex/: AGENTS.md  README.md
plugins/hermes/: .gitignore  README.md  __init__.py  after-install.md  hooks.py  plugin.yaml  pyproject.toml
plugins/hermes/scripts/: install-nbr.sh  install.sh
plugins/hermes/skills/archetypes/: SKILL.md
plugins/hermes/skills/dating-photos/: SKILL.md
plugins/hermes/skills/drawing/: SKILL.md
plugins/hermes/skills/memory/: SKILL.md
plugins/hermes/skills/nbr/: SKILL.md
plugins/hermes/skills/public-photos/: SKILL.md
plugins/hermes/skills/self-exploration/: SKILL.md
plugins/hermes/tests/: test_hooks.py
proxy/: Dockerfile  README.md  fly.toml  nginx.conf.template
sandbox/: README.md
sandbox/templates/: nudge.txt
scripts/: check-coverage.sh
scripts/hooks/: check-commit-msg  check-secrets  format-changed.sh  guard-destructive.sh  post-checkout  post-merge  pre-push-gate
scripts/mise-tasks/: tsconfig.json
scripts/mise-tasks/agents/: up  (+10 more)
(+160 files in other folders)
