# Cargo workspace root. The `nbr` CLI lives in cli/. Keeping the workspace
# manifest at the repo root means `cargo fmt`/`cargo clippy`/cargo-dist resolve
# the crate from anywhere in the repo (git hooks run from the root).
[workspace]
members = ["cli"]
resolver = "2"

# cargo-dist release configuration.
# `dist generate` re-emits .github/workflows/release.yml from this section.
# We hand-maintain that file instead; this block documents the intent and keeps
# cargo-dist state if someone runs `dist init` in future.
[workspace.metadata.dist]
# Only release the nbr crate when a tag matching cli-v* is pushed.
tag-namespace = "cli"
# Targets built in CI.
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "aarch64-unknown-linux-musl",
  "x86_64-unknown-linux-musl",
  "x86_64-pc-windows-msvc",
]
# Archive format per platform.
unix-archive = ".tar.xz"
windows-archive = ".zip"
# Shell + PowerShell installers are generated alongside the archives.
install-updater = false
checksum = "sha256"
