[package]
name = "nbr"
version = "0.1.0"
edition = "2024"

[lib]
name = "nbr"
path = "src/lib.rs"

[[bin]]
name = "nbr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
clap_complete = "4.6.5"
clap_usage = "2.0.3"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.102"
thiserror = "2.0.18"
directories = "6.0.0"
keyring = "4.1.2"
toml = "1.1.2"
owo-colors = "4.3.0"
comfy-table = "7.2.2"
url = "2.5.8"
chrono = { version = "0.4.45", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
wiremock = "0.6.5"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
