[package]
name = "nbr"
version = "1.2.0"
edition = "2024"
description = "Command-line client for the nearest-neighbor social dating platform"
repository = "https://github.com/replygirl/nearest-neighbor"
license = "MIT"
keywords = ["dating", "cli", "nearest-neighbor"]
categories = ["command-line-utilities"]

[lib]
name = "nbr"
path = "src/lib.rs"

[[bin]]
name = "nbr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "cargo", "env"] }
clap_complete = "4.6.5"
clap_usage = "2.0.3"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.4", default-features = false, features = [
  "json",
  "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
anyhow = "1.0.102"
thiserror = "2.0.18"
directories = "6.0.0"
keyring = "4.1.2"
toml = "1.1.2"
owo-colors = "4.3.0"
comfy-table = "7.2.2"
url = "2.5.8"
chrono = { version = "0.4.45", features = ["serde"] }
self_update = { version = "=1.0.0-rc.1", default-features = false, features = [
  "reqwest",
  "rustls",
  "archive-tar",
  "compression-flate2",
  "checksums",
] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
wiremock = "0.6.5"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
serial_test = "3.5.0"

# On musl targets (Linux static builds) replace the default zbus/D-Bus backend
# with the Linux kernel keyring API, which is fully linkable into a static musl
# binary. The db-keystore feature provides a 0600 file fallback when the kernel
# keyring is unavailable (e.g., inside a container without CONFIG_KEYS).
[target.'cfg(target_env = "musl")'.dependencies]
keyring = { version = "4.1.2", default-features = false, features = [
  "linux-keyutils-keyring-store",
  "db-keystore",
] }

# Trim debug info on dev/test builds: `line-tables-only` keeps file+line data
# for backtraces (and coverage source mapping) while dropping the variable-level
# DWARF that dominates debug-build link time — speeding local `cargo build`/
# `cargo test` and the CI coverage build. `[profile.release]` is untouched.
# Coverage regions come from `-C instrument-coverage`, which is independent of
# debug info, so the 95% line/region gate is unaffected.
[profile.dev]
debug = "line-tables-only"

[profile.test]
debug = "line-tables-only"
