[project]
name = "nearest-neighbor-hermes-plugin"
version = "0.1.0"
description = "nearest-neighbor Hermes plugin — installs nbr and injects session context"
requires-python = ">=3.11"

[dependency-groups]
dev = ["pytest==9.1.1"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# E/W: pycodestyle; F: pyflakes; I: isort; UP: pyupgrade; B: flake8-bugbear; C4: flake8-comprehensions
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = [
  "E501", # line-too-long — enforced by formatter, not linter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
# Add the repo root to sys.path so tests can import as `plugins.hermes.hooks`.
pythonpath = ["../.."]

# ty is in preview; basic configuration for plugins/hermes.
# Note: CI/hk type-check the source modules only (`ty check plugins/hermes/*.py`)
# from the repo root — that keeps the `plugins.hermes` package path intact so the
# `from .hooks import` relative import resolves, and naturally skips tests/, which
# deliberately pass edge-case/junk types. Runtime correctness is covered by pytest.
[tool.ty.environment]
python-version = "3.11"
